--- a/bumisuplai.html
+++ b/bumisuplai.html
@@ -98,11 +98,11 @@
                     </div>
                     <div class="social-login"> <!-- start social icon div -->
                       <ul class="social-page-nav">
-                        <li><a href="#" class="fb"><i class="social_facebook"></i></a></li>
+                        <!-- <li><a href="#" class="fb"><i class="social_facebook"></i></a></li>
                         <li><a href="#" class="tw"><i class="social_twitter"></i></a></li>
-                        <li><a href="#" class="gp"><i class="social_googleplus"></i></a></li>
-                        <li><a href="#" class="ins"><i class=" social_instagram"></i></a></li>
-                        <li><a href="#" class="rs"><i class="social_rss"></i></a></li>
+                        <li><a href="#" class="gp"><i class="social_googleplus"></i></a></li> -->
+                        <li><a href="https://instagram.com/bumisuplai" class="ins"><i class=" social_instagram"></i></a></li>
+                        <!-- <li><a href="#" class="rs"><i class="social_rss"></i></a></li> -->
                       </ul>
                     </div> <!-- end social icon div -->
                   </div>
@@ -111,7 +111,7 @@
                       <div class="col-md-6">
                         <p><i class="icon_mobile"></i>MOBILE : 0821-....-....</p>
                         <p><i class="icon_mail_alt"></i>EMAIL : sampleemail@domain.com</p>
-                        <p><i class="social_skype"></i>SKYPE : sample_skype1234</p>
+                        <p><i class="social_instagram"></i>Instagram : @bumisuplai</p>
                         <p><i class="icon_globe-2"></i>WEBSITE : <a href="#">http://bumiseduh.com/</a> </p>
                       </div>
                       <div class="col-md-6">
@@ -131,9 +131,9 @@
                 <p class="about-text" style="text-align: justify;color: black;" >
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Bumi Suplai adalah distributor sirup dan powder drink (bubuk minuman) yang bekerjasama langsung dengan produsen merek terkenal. Kantor dan gudang Bumi Suplai terletak di Jl. Jogokariyan 12D, Yogyakarta. Sejak tahun 2021, Bumi Suplai memasok sirup dan powder drink ke beberapa coffee shop di Jogja. 
                     <br>
-                    Saat ini terdapat sekitar 40 coffee shop di Jogja yang berlangganan produk dari Bumi Suplai. Bumi Suplai juga memiliki beberapa reseller di luar kota seperti Solo dan Probolinggo. Para reseller tersebut merupakan pemasok dari beberapa coffee shop di masing-masing kota.  
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saat ini terdapat sekitar 40 coffee shop di Jogja yang berlangganan produk dari Bumi Suplai. Bumi Suplai juga memiliki beberapa reseller di luar kota seperti Solo dan Probolinggo. Para reseller tersebut merupakan pemasok dari beberapa coffee shop di masing-masing kota.  
                     <br>
-                    Meskipun baru beroperasi sekitar satu tahun, namun para pengelola Bumi Suplai telah memiliki pengalaman di bidang distribusi sirup dan powder drink selama lebih dari tiga tahun. Sebelumnya mereka telah memiliki jejaring mulai dari coffee shop, reseller, hingga distributor lokal di Jogja dan beberapa kota lain di Pulau Jawa. Sehingga Bumi Suplai memiliki jejaring usaha yang cukup luas dan sangat besar potensinya untuk dikembangkan. 
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Meskipun baru beroperasi sekitar satu tahun, namun para pengelola Bumi Suplai telah memiliki pengalaman di bidang distribusi sirup dan powder drink selama lebih dari tiga tahun. Sebelumnya mereka telah memiliki jejaring mulai dari coffee shop, reseller, hingga distributor lokal di Jogja dan beberapa kota lain di Pulau Jawa. Sehingga Bumi Suplai memiliki jejaring usaha yang cukup luas dan sangat besar potensinya untuk dikembangkan. 
                 </p>
               </div>
               <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
@@ -141,11 +141,11 @@
                 <p class="about-text" style="text-align: justify;color: black;" >
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pada 2017, jumlah coffee shop atau kedai kopi di Jogja dan sekitarnya telah mencapai angka 1.200 kedai. Kemudian setelah tahun 2017 jumlah coffee shop di Jogja dan sekitarnya cenderung mengalami peningkatan. Usaha coffee shop memang sempat meredup selama dua tahun terakhir karena pandemi. Namun sejak pandemi mulai mereda dan pembatasan sosial dilonggarkan, coffee shop kembali ramai pengunjung. Banyak bermunculan coffee shop baru menggantikan beberapa yang tutup saat pandemi. Diperkirakan beberapa bulan ke depan pengunjung coffee shop semakin ramai seiring dengan bertambahnya pendatang yang sebagian besar adalah pelajar dan mahasiswa.
                     <br>
-                    Semakin ramainya coffee shop berdampak pada peningkatan permintaan terhadap produk sirup dan powder drink sebagai bahan campuran minuman kekinian. Kunjungan coffee shop yang semakin ramai membuat permintaan terhadap produk Bumi Suplai semakin meningkat. Bumi Suplai juga sudah mulai dikenal di kalangan pengusaha coffee shop di Jogja dan sekitarnya.   
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Semakin ramainya coffee shop berdampak pada peningkatan permintaan terhadap produk sirup dan powder drink sebagai bahan campuran minuman kekinian. Kunjungan coffee shop yang semakin ramai membuat permintaan terhadap produk Bumi Suplai semakin meningkat. Bumi Suplai juga sudah mulai dikenal di kalangan pengusaha coffee shop di Jogja dan sekitarnya.   
                     <br>
-                    Potensi pasar Bumi Suplai masih cukup luas karena ada lebih dari 1.000 coffee shop di Jogja dan sekitarnya. Tidak hanya coffee shop atau kedai kopi saja yang menggunakan sirup dan bubuk minuman ini. Kafe, restoran, dan outlet minuman juga membutuhkan produk tersebut sebagai bahan untuk membuat minuman kekinian yang banyak diminati.
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Potensi pasar Bumi Suplai masih cukup luas karena ada lebih dari 1.000 coffee shop di Jogja dan sekitarnya. Tidak hanya coffee shop atau kedai kopi saja yang menggunakan sirup dan bubuk minuman ini. Kafe, restoran, dan outlet minuman juga membutuhkan produk tersebut sebagai bahan untuk membuat minuman kekinian yang banyak diminati.
 
-                    Produk berkualitas dengan harga kompetitif adalah keunggulan yang dimiliki Bumi Suplai. Sebagai mitra kerjasama spesial dari Denali dan Trieste, Bumi Suplai memperoleh harga beli khusus. 
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Produk berkualitas dengan harga kompetitif adalah keunggulan yang dimiliki Bumi Suplai. Sebagai mitra kerjasama spesial dari Denali dan Trieste, Bumi Suplai memperoleh harga beli khusus. 
 
                 </p>
               <div class="rq-user-assigned-listing">
@@ -221,13 +221,14 @@
                     <img style="height:130px; width:100px;" src="assets/dist/img/logo/1_1.png" alt="">
                   </a>
                   <p class="description">Bumi Seduh merupakan badan usaha yang fokus bergerak di bidang ekosistem industri kopi di Indonesia, yakni membuka dan mengelola Coffee Shop, suplai bahan baku dan peralatan, kosultasi, serta pengembangan SDM.</p>
-                  <span class="address"><i class="icon_pin"></i>79 Orchard St, New York, Ny 10002, United States.</span>
-                  <span class="address"><i class="icon_mail_alt"></i>hello@yourdomain.com</span>
-                  <span class="address"><i class="icon_phone"></i>(0091) 8547 632521</span>
+                  
+                  <span class="address"><i class="icon_pin"></i> Jl. Wonosari KM 7 Bantul Yogyakarta. </span>
+                  <span class="address"><i class="icon_mail_alt"></i>cangkirbumi@gmail.com</span>
+                  <span class="address"><i class="icon_phone"></i>(+62) 823-2326-4666</span>
 
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3">
+              <!-- <div class="col-md-3 col-sm-3">
                 <div class="widget-address">
                   <h4 class="widget-title">Alamat</h4>
                   <span class="address"><i class="icon_pin"></i> Jl. Wonosari KM 7 Bantul Yogyakarta. </span>
@@ -265,7 +266,7 @@
                     <li><a href="#"><i class="social_dribbble"></i></a></li>
                   </ul>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -277,9 +278,9 @@
             <p>Copyrights © 2022 Cangkir Bumis with theme by <a href="#">SCHOLAR.</a> All Rights Reserved. Develop by Ari Dimas</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Properties</a></li>
-              <li><a href="#">Agents</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#">Lokasi</a></li>
+              <li><a href="#">Profil</a></li>
+              <li><a href="https://api.whatsapp.com/send?phone=082323264666&text=Halo%20benar%20dengan%20bumi%20seduh?">Kontak</a></li>
             </ul>
           </div>
         </div>
