--- a/cangkirbumi.html
+++ b/cangkirbumi.html
@@ -98,11 +98,11 @@
                     </div>
                     <div class="social-login"> <!-- start social icon div -->
                       <ul class="social-page-nav">
-                        <li><a href="#" class="fb"><i class="social_facebook"></i></a></li>
+                        <!-- <li><a href="#" class="fb"><i class="social_facebook"></i></a></li>
                         <li><a href="#" class="tw"><i class="social_twitter"></i></a></li>
-                        <li><a href="#" class="gp"><i class="social_googleplus"></i></a></li>
-                        <li><a href="#" class="ins"><i class=" social_instagram"></i></a></li>
-                        <li><a href="#" class="rs"><i class="social_rss"></i></a></li>
+                        <li><a href="#" class="gp"><i class="social_googleplus"></i></a></li> -->
+                        <li><a href="https://instagram.com/cangkirbumi" class="ins"><i class=" social_instagram"></i></a></li>
+                        <!-- <li><a href="#" class="rs"><i class="social_rss"></i></a></li> -->
                       </ul>
                     </div> <!-- end social icon div -->
                   </div>
@@ -110,9 +110,9 @@
                     <div class="row">
                       <div class="col-md-6">
                         <p><i class="icon_mobile"></i>MOBILE : 0821-....-....</p>
-                        <p><i class="icon_mail_alt"></i>EMAIL : sampleemail@domain.com</p>
-                        <p><i class="social_skype"></i>SKYPE : sample_skype1234</p>
-                        <p><i class="icon_globe-2"></i>WEBSITE : <a href="#">http://bumiseduh.com/</a> </p>
+                        <p><i class="icon_mail_alt"></i>EMAIL : cangkirbumi@gmail.com</p>
+                        <p><i class="social_instagram"></i>@cangkirbumi</p>
+                        <p><i class="icon_globe-2"></i>WEBSITE : <a href="#">http://bumiseduh.com/cangkirbumi.html</a> </p>
                       </div>
                       <div class="col-md-6">
                         <p><i class="icon_mobile"></i>LANDLINE : (+0420) 4768 346 57 89</p>
@@ -131,12 +131,12 @@
                 <p class="about-text" style="text-align: justify;color: black;" >
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cangkir bumi merupakan sebuah kedai kopi (kafe) yang didirikan pada tanggal 28 Februari 2021, berlokasi di tengah kota Jogja, tepatnya di Jl. Prof. Dr. Soepomo SH, Warungboto, Umbulharjo, Yogyakarta. Luas kafe ini + 1.100 m2 yang terbagi menjadi tiga bagian utama yakni: area produksi + 60 m2, area tongkrongan + 500 m2 (80% terbuka dengan atap dan 20% terbuka tanpa atap), dan area parkiran + 550 m2 (muat untuk 180 unit motor dan 10 unit Mobil). Di kafe ini juga tersedia kamar kecil dan mushalla serta fasilitas free Wi-fi. 
                     <br>
-                    Cangkir bumi mengusung konsep semi tradisional. Bangunan utama kafe ini adalah joglo jawa kuno yang berukuran 16 m x 12 m, dibangun dengan pondasi dan tiangnya berbasis beton yang sangat kokoh, dan keseluruhan rangka atasnya berbasis bahan kayu yang sangat kuat. Kursi yang disediakan bervariasi yakni; sekitar 20% sofa, semi sofa 15% dan kursi kayu 65%. Secara keseluruhan dapat menampung kurang lebih 180 seat. Di setiap meja tersedia stop kontak untuk mendukung aktivitas customer yang memerlukan colokan listrik saat nongkrong maupun mengerjakan tugas.  
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cangkir bumi mengusung konsep semi tradisional. Bangunan utama kafe ini adalah joglo jawa kuno yang berukuran 16 m x 12 m, dibangun dengan pondasi dan tiangnya berbasis beton yang sangat kokoh, dan keseluruhan rangka atasnya berbasis bahan kayu yang sangat kuat. Kursi yang disediakan bervariasi yakni; sekitar 20% sofa, semi sofa 15% dan kursi kayu 65%. Secara keseluruhan dapat menampung kurang lebih 180 seat. Di setiap meja tersedia stop kontak untuk mendukung aktivitas customer yang memerlukan colokan listrik saat nongkrong maupun mengerjakan tugas.  
                     <br>
                     <br>
-                    Menu yang ditawakan di Cangkir Bumi sangat beragam dengan mangandalkan kopi sebagai menu utama baik diseduh secara manual maupun espresso base. Meski demikian fokus penjualan tidak hanya pada kopi saja, tetapi juga menjual minuman aneka jus buah dan minuman yang berbahan bubuk seperti matcha, coklat, red velvet, dll. tersedia juga minuman tradisional seperti wadang susu jahe, wadang uwuh, dll. Untuk menu snack tersedia cireng, pisang goreng, kentang goreng, singkong goreng dll, sedangkan untuk menu makanan beratnya antara lain; nasi ayam sambal matah, nasi telor, indomie, dll. harga menu di cangkir bumi relatif murah mulai dari harga Rp5.000 sampai dengan Rp25.000.
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Menu yang ditawakan di Cangkir Bumi sangat beragam dengan mangandalkan kopi sebagai menu utama baik diseduh secara manual maupun espresso base. Meski demikian fokus penjualan tidak hanya pada kopi saja, tetapi juga menjual minuman aneka jus buah dan minuman yang berbahan bubuk seperti matcha, coklat, red velvet, dll. tersedia juga minuman tradisional seperti wadang susu jahe, wadang uwuh, dll. Untuk menu snack tersedia cireng, pisang goreng, kentang goreng, singkong goreng dll, sedangkan untuk menu makanan beratnya antara lain; nasi ayam sambal matah, nasi telor, indomie, dll. harga menu di cangkir bumi relatif murah mulai dari harga Rp5.000 sampai dengan Rp25.000.
                     <br>
-                    Konsumen Cangkir Bumi cukup beragam, paling banyak adalah mahasiswa dari kampus yang berbeda-beda di Yogyakarta. Selain untuk nongkrong dan menikmati kopi, mahasiswa  yang datang ke Cangkir Bumi juga banyak yang mengejarkan tugas, diskusi kelompok, dan rapat komunitas. 
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Konsumen Cangkir Bumi cukup beragam, paling banyak adalah mahasiswa dari kampus yang berbeda-beda di Yogyakarta. Selain untuk nongkrong dan menikmati kopi, mahasiswa  yang datang ke Cangkir Bumi juga banyak yang mengejarkan tugas, diskusi kelompok, dan rapat komunitas. 
                 </p>
               </div>
               <div class="rq-user-about wow fadeIn" data-wow-delay=".2s">
@@ -164,13 +164,17 @@
                 <p class="about-text" style="color: black ;">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cangkir Bumi di didirikan pada saat memasuki tahun pertama pandemi covid-19, di tengah situasi pemberlakuan protokol kesehatan yang masih ketat, seperti jaga jarak dan pembatasan jam malam. <br>
                 <br>
-                Keputusan mendirikan kafe Cangkir Bumi merupakan keputusan yang sulit dan cendrung nekat. Sebab pada saat itu jogja dalam kondisi sangat sepi mahasiswa. Mahasiswa banyak yang memilih tinggal dikampung halaman karena semua kampus menerapakan pembelajaran daring. Akibatnya hampir semua usaha yang mengandalkan dine in di Jogja mengalami dampak penurunan omzet yang sangat drastis. Namun situasi yang sulit tersebut tidak menadi kendala bagi owner Cangkir Bumi untuk tetap mendirikan kafe Cangkir Bumi. Alasan besarnya karena tabungan uang owner Cangkir Bumi sudah sangat menipis, sehingga kalau tidak dipaksa untuk memodali usaha maka akan habis begitu saja, meskipun juga ada potensi risiko kerugian yang besar bila terjadi kegagalan di Cangkir Bumi.
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Keputusan mendirikan kafe Cangkir Bumi merupakan keputusan yang sulit dan cendrung nekat. Sebab pada saat itu jogja dalam kondisi sangat sepi mahasiswa. Mahasiswa banyak yang memilih tinggal dikampung halaman karena semua kampus menerapakan pembelajaran daring. Akibatnya hampir semua usaha yang mengandalkan dine in di Jogja mengalami dampak penurunan omzet yang sangat drastis. Namun situasi yang sulit tersebut tidak menadi kendala bagi owner Cangkir Bumi untuk tetap mendirikan kafe Cangkir Bumi. Alasan besarnya karena tabungan uang owner Cangkir Bumi sudah sangat menipis, sehingga kalau tidak dipaksa untuk memodali usaha maka akan habis begitu saja, meskipun juga ada potensi risiko kerugian yang besar bila terjadi kegagalan di Cangkir Bumi.
                 <br>
                 <br>
-                Pada awal tahun 2021 tepat bulan januari, tahap pembangunan Cangkir Bumi dimulai. Selama tahap pembangunan, beberapa rekan membantu persiapan menu yang akan dijual. Kemudian tepat pada tanggal 28 Februari 2021 Cangkir Bumi resmi dibuka untuk pelanggan umum. Dan ternyata, antusiame konsumen cukup tinggi. Awalnya karyawan hanya 3 orang saja tetapi secara bertahap bertambah terus hingga jadi 10 karyawan. Jumlah kursi juga terus mengalami peningkatan, dari yang awalnya hanya mampu menampung 90 pengujung, bertambah 100% jadi mampu menampung 180 pengunjung. Selain itu, menu-menu yang tersedia juga mengalami perkembangan baik dari segi kualitas maupun kuantitas.
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pada awal tahun 2021 tepat bulan januari, tahap pembangunan Cangkir Bumi dimulai. Selama tahap pembangunan, beberapa rekan membantu persiapan menu yang akan dijual. Kemudian tepat pada tanggal 28 Februari 2021 Cangkir Bumi resmi dibuka untuk pelanggan umum. Dan ternyata, antusiame konsumen cukup tinggi. Awalnya karyawan hanya 3 orang saja tetapi secara bertahap bertambah terus hingga jadi 10 karyawan. Jumlah kursi juga terus mengalami peningkatan, dari yang awalnya hanya mampu menampung 90 pengujung, bertambah 100% jadi mampu menampung 180 pengunjung. Selain itu, menu-menu yang tersedia juga mengalami perkembangan baik dari segi kualitas maupun kuantitas.
                 <br>
                 </p>
               </div>
+              <div class="wow fadeInUp">
+                <img style="margin-left: 15vw; height:30vw ; width:50vw;"   src="assets/dist/img/logo/cb2.jpeg" alt="">
+              </div>
+              <br>
               <div class="rq-user-assigned-listing">
                 <h3 class="rq-title-secondary">Other Start-Up</h3>
                 <div class="rq-category-result" id="rq-category-result">
@@ -241,31 +245,20 @@
               <div class="col-md-3 col-sm-3">
                 <div class="widget-address">
                   <a href="#">
-                    <img src="assets/dist/img/real-estate/company-logo.png" alt="">
+                    <img style="height:130px; width:100px;" src="assets/dist/img/logo/1_1.png" alt="">
                   </a>
-                  <p class="description">SCHOLAR is a multipurpose directory HTML Template which is the most perfect solution for your business.</p>
-                  <span class="address"><i class="icon_pin"></i>79 Orchard St, New York, Ny 10002, United States.</span>
-                  <span class="address"><i class="icon_mail_alt"></i>hello@yourdomain.com</span>
-                  <span class="address"><i class="icon_phone"></i>(0091) 8547 632521</span>
+                  <p class="description">Bumi Seduh merupakan badan usaha yang fokus bergerak di bidang ekosistem industri kopi di Indonesia, yakni membuka dan mengelola Coffee Shop, suplai bahan baku dan peralatan, kosultasi, serta pengembangan SDM.</p>
+                  
+                  <span class="address"><i class="icon_pin"></i> Jl. Wonosari KM 7 Bantul Yogyakarta. </span>
+                  <span class="address"><i class="icon_mail_alt"></i>cangkirbumi@gmail.com</span>
+                  <span class="address"><i class="icon_phone"></i>(+62) 823-2326-4666</span>
 
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3">
-                <div class="widget-tags">
-                  <h4 class="widget-title">popular tags</h4>
-                  <div class="tagcloud">
-                    <a href="#" class="rq-tag">Amazing</a>
-                    <a href="#" class="rq-tag">Envato</a>
-                    <a href="#" class="rq-tag">Themes</a>
-                    <a href="#" class="rq-tag">Clean</a>
-                    <a href="#" class="rq-tag">Wordpress</a>
-                    <a href="#" class="rq-tag">Directory</a>
-                    <a href="#" class="rq-tag">Mutilpurpose</a>
-                    <a href="#" class="rq-tag">Retina Ready</a>
-                    <a href="#" class="rq-tag">Twitter</a>
-                    <a href="#" class="rq-tag">Real Estate</a>
-                  </div>
-
+              <!-- <div class="col-md-3 col-sm-3">
+                <div class="widget-address">
+                  <h4 class="widget-title">Alamat</h4>
+                  <span class="address"><i class="icon_pin"></i> Jl. Wonosari KM 7 Bantul Yogyakarta. </span>
                 </div>
               </div>
               <div class="col-md-3 col-sm-3">
@@ -300,7 +293,7 @@
                     <li><a href="#"><i class="social_dribbble"></i></a></li>
                   </ul>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -312,9 +305,9 @@
             <p>Copyrights © 2022 Cangkir Bumis with theme by <a href="#">SCHOLAR.</a> All Rights Reserved. Develop by Ari Dimas</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Properties</a></li>
-              <li><a href="#">Agents</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#">Lokasi</a></li>
+              <li><a href="#">Profil</a></li>
+              <li><a href="https://api.whatsapp.com/send?phone=082323264666&text=Halo%20benar%20dengan%20bumi%20seduh?">Kontak</a></li>
             </ul>
           </div>
         </div>
