--- a/index.html
+++ b/index.html
@@ -581,11 +581,11 @@
                     </div>
                     <div class="social-login"> <!-- start social icon div -->
                       <ul class="social-page-nav">
-                        <li><a href="#" class="fb"><i class="social_facebook"></i></a></li>
+                        <!-- <li><a href="#" class="fb"><i class="social_facebook"></i></a></li>
                         <li><a href="#" class="tw"><i class="social_twitter"></i></a></li>
-                        <li><a href="#" class="gp"><i class="social_googleplus"></i></a></li>
-                        <li><a href="#" class="ins"><i class=" social_instagram"></i></a></li>
-                        <li><a href="#" class="rs"><i class="social_rss"></i></a></li>
+                        <li><a href="#" class="gp"><i class="social_googleplus"></i></a></li> -->
+                        <li><a href="https://instagram.com/bumiseduh" class="ins"><i class=" social_instagram"></i></a></li>
+                        <!-- <li><a href="#" class="rs"><i class="social_rss"></i></a></li> -->
                       </ul>
                     </div> <!-- end social icon div -->
                   </div>
@@ -594,7 +594,7 @@
                       <div class="col-md-6">
                         <p><i class="icon_mobile"></i>MOBILE : 0821-....-....</p>
                         <p><i class="icon_mail_alt"></i>EMAIL : sampleemail@domain.com</p>
-                        <p><i class="social_skype"></i>SKYPE : sample_skype1234</p>
+                        <p><i class="social_instagram"></i>Instagram : @bumiseduh</p>
                         <p><i class="icon_globe-2"></i>WEBSITE : <a href="#">http://bumiseduh.com/</a> </p>
                       </div>
                       <div class="col-md-6">
@@ -643,31 +643,20 @@
               <div class="col-md-3 col-sm-3">
                 <div class="widget-address">
                   <a href="#">
-                    <img src="assets/dist/img/real-estate/company-logo.png" alt="">
+                    <img style="height:130px; width:100px;" src="assets/dist/img/logo/1_1.png" alt="">
                   </a>
-                  <p class="description">SCHOLAR is a multipurpose directory HTML Template which is the most perfect solution for your business.</p>
-                  <span class="address"><i class="icon_pin"></i>79 Orchard St, New York, Ny 10002, United States.</span>
-                  <span class="address"><i class="icon_mail_alt"></i>hello@yourdomain.com</span>
-                  <span class="address"><i class="icon_phone"></i>(0091) 8547 632521</span>
+                  <p class="description">Bumi Seduh merupakan badan usaha yang fokus bergerak di bidang ekosistem industri kopi di Indonesia, yakni membuka dan mengelola Coffee Shop, suplai bahan baku dan peralatan, kosultasi, serta pengembangan SDM.</p>
+                  
+                  <span class="address"><i class="icon_pin"></i> Jl. Wonosari KM 7 Bantul Yogyakarta. </span>
+                  <span class="address"><i class="icon_mail_alt"></i>cangkirbumi@gmail.com</span>
+                  <span class="address"><i class="icon_phone"></i>(+62) 823-2326-4666</span>
 
                 </div>
               </div>
-              <div class="col-md-3 col-sm-3">
-                <div class="widget-tags">
-                  <h4 class="widget-title">popular tags</h4>
-                  <div class="tagcloud">
-                    <a href="#" class="rq-tag">Amazing</a>
-                    <a href="#" class="rq-tag">Envato</a>
-                    <a href="#" class="rq-tag">Themes</a>
-                    <a href="#" class="rq-tag">Clean</a>
-                    <a href="#" class="rq-tag">Wordpress</a>
-                    <a href="#" class="rq-tag">Directory</a>
-                    <a href="#" class="rq-tag">Mutilpurpose</a>
-                    <a href="#" class="rq-tag">Retina Ready</a>
-                    <a href="#" class="rq-tag">Twitter</a>
-                    <a href="#" class="rq-tag">Real Estate</a>
-                  </div>
-
+              <!-- <div class="col-md-3 col-sm-3">
+                <div class="widget-address">
+                  <h4 class="widget-title">Alamat</h4>
+                  <span class="address"><i class="icon_pin"></i> Jl. Wonosari KM 7 Bantul Yogyakarta. </span>
                 </div>
               </div>
               <div class="col-md-3 col-sm-3">
@@ -702,7 +691,7 @@
                     <li><a href="#"><i class="social_dribbble"></i></a></li>
                   </ul>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -711,12 +700,12 @@
       <div class="rq-copyright-section">
         <div class="container">
           <div class="copyright-content">
-            <p>Copyrights © 2022 Bumi Seduh with theme by <a href="#">SCHOLAR.</a> All Rights Reserved. Develop by Ari Dimas</p>
+            <p>Copyrights © 2022 Cangkir Bumis with theme by <a href="#">SCHOLAR.</a> All Rights Reserved. Develop by Ari Dimas</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Properties</a></li>
-              <li><a href="#">Agents</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#">Lokasi</a></li>
+              <li><a href="#">Profil</a></li>
+              <li><a href="https://api.whatsapp.com/send?phone=082323264666&text=Halo%20benar%20dengan%20bumi%20seduh?">Kontak</a></li>
             </ul>
           </div>
         </div>
