changing map, about us, and else

--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Scholar - contact us</title>
     <!-- Main style -->
-    <link rel="shortcut icon" href="./assets/dist/img/logo/11.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/dist/img/logo/12nobg.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/dist/css/real-estate.style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -35,13 +35,13 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="assets/dist/img/logo/1_1.png" alt=""/></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/dist/img/logo/12nobg.png" class="img-responsive" alt=""/></a>
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a href="index.html" >Home</a></li>
+                  <li><a href="index.html" >Home</a></li>
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                         aria-haspopup="true" aria-expanded="false">Start-Up <span class="ion-chevron-down"></span></a>
@@ -54,7 +54,7 @@
                     </li>
                     <li class=""><a href="lokasi.html" >Lokasi</a></li>
                     </li>
-                    <li><a href="bumiseduh.html">about us</a>
+                    <li class="active"><a href="about-us.html">about us</a>
                     </li>
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
