--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Scholar - contact us</title>
     <!-- Main style -->
-    <link rel="shortcut icon" href="./assets/dist/img/logo/12nobg.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/dist/img/logo/1_1.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/dist/css/real-estate.style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -35,7 +35,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="assets/dist/img/logo/12nobg.png" class="img-responsive" alt=""/></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/dist/img/logo/1_1.png" alt=""/></a>
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -93,7 +93,7 @@
                     <div class="rq-address-single wow fadeIn" data-wow-delay=".3s">
                       <i class="icon_pin_alt"></i>
                       <h4>Address</h4>
-                      <p class="rq-address-text">Jl. Patih Singoranu, Tamanan<br>Kabupaten Bantul, DIY, 55191</p>
+                      <p class="rq-address-text">Jl. Wonosari KM 7 Bantul <br> Yogyakarta.</p>
                     </div>
                     <div class="rq-address-single wow fadeIn" data-wow-delay=".5s">
                       <i class="icon_mail_alt"></i>
@@ -153,7 +153,7 @@
                   <p class="description" style="text-align: center;">Bumi Seduh merupakan badan usaha yang fokus bergerak di bidang ekosistem industri kopi di Indonesia, yakni membuka dan mengelola Coffee Shop, suplai bahan baku dan peralatan, kosultasi, serta pengembangan SDM.</p>
                   
                   <span style="text-align: center;" class="address"><i class="icon_pin" ></i> Jl. Wonosari KM 7 Bantul Yogyakarta. </span>
-                  <span style="text-align: center;" class="address"><i class="icon_mail_alt"></i>cangkirbumi@gmail.com</span>
+                  <span style="text-align: center;" class="address"><i class="icon_mail_alt"></i>bumiseduh@gmail.com</span>
                   <span style="text-align: center;" class="address"><i class="icon_phone"></i>(+62) 823-2326-4666</span>
 
                 </div>
@@ -208,8 +208,8 @@
             <p>Copyrights © 2022 <a href="#">Bumi Seduh</a> All Rights Reserved. Develop by Ari Dimas</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Lokasi</a></li>
-              <li><a href="#">Profil</a></li>
+              <li><a href="lokasi.html">Lokasi</a></li>
+              <li><a href="about-us.html">Profil</a></li>
               <li><a href="https://api.whatsapp.com/send?phone=082323264666&text=Halo%20benar%20dengan%20bumi%20seduh?">Kontak</a></li>
             </ul>
           </div>
