--- a/fix/cangkirbumi.html
+++ b/fix/cangkirbumi.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BUMI SEDUH</title>
     <!-- Main style -->
-    <link rel="shortcut icon" href="./assets/dist/img/logo/11.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/dist/img/logo/1_1.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/dist/css/real-estate.style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -250,7 +250,7 @@
                   <p class="description">Bumi Seduh merupakan badan usaha yang fokus bergerak di bidang ekosistem industri kopi di Indonesia, yakni membuka dan mengelola Coffee Shop, suplai bahan baku dan peralatan, kosultasi, serta pengembangan SDM.</p>
                   
                   <span class="address"><i class="icon_pin"></i> Jl. Wonosari KM 7 Bantul Yogyakarta. </span>
-                  <span class="address"><i class="icon_mail_alt"></i>cangkirbumi@gmail.com</span>
+                  <span class="address"><i class="icon_mail_alt"></i>bumiseduh@gmail.com</span>
                   <span class="address"><i class="icon_phone"></i>(+62) 823-2326-4666</span>
 
                 </div>
@@ -302,7 +302,7 @@
       <div class="rq-copyright-section">
         <div class="container">
           <div class="copyright-content">
-            <p>Copyrights © 2022 Cangkir Bumis with theme by <a href="#">SCHOLAR.</a> All Rights Reserved. Develop by Ari Dimas</p>
+            <p>Copyrights © 2022 <a href="#">Bumi Seduh</a> All Rights Reserved. Develop by Ari Dimas</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
               <li><a href="#">Lokasi</a></li>
