--- a/listing-slider.html
+++ b/listing-slider.html
@@ -139,7 +139,7 @@
             <ul>  <!-- SLIDE  -->
               <li data-index="rs-92" data-transition="fade" data-slotamount="7"  data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500"  data-thumb="assets/dist/img/company/revolution/lightbg-100x50.png"  data-rotate="0"  data-saveperformance="off"  data-title="Welcome" data-description="">
                 <!-- MAIN IMAGE -->
-                <img src="assets/dist/img/company/revolution/dummy.png"  alt=""  data-lazyload="assets/dist/img/real-estate/revolution/revolution-slider-bg.jpg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
+                <img src="assets/dist/img/bumiseduh/2.jpeg"  alt=""  data-lazyload="assets/dist/img/bumiseduh/1.jpeg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
                 <!-- LAYERS -->
 
                 <!-- LAYER NR. 1 -->
@@ -464,7 +464,7 @@
                   data-responsive_offset="on"
 
 
-                  style="z-index: 8;"><img src="assets/dist/img/company/revolution/dummy.png" alt="" width="864" height="400" data-ww="['583px','756','540','432px']" data-hh="['718px','350','250','200px']" data-lazyload="assets/dist/img/real-estate/revolution/revolution-slider-man.png" data-no-retina>
+                  style="z-index: 8;"><img src="assets/dist/img/company/revolution/dummy.png" alt="" width="864" height="400" data-ww="['583px','756','540','432px']" data-hh="['718px','350','250','200px']" data-lazyload="assets/dist/img/bumiseduh/1.jpeg" data-no-retina>
                 </div>
 
 
@@ -494,7 +494,7 @@
               </li>
               <li data-index="rs-93" data-transition="fade" data-slotamount="7"  data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500"  data-thumb="assets/dist/img/company/revolution/lightbg-100x50.png"  data-rotate="0"  data-saveperformance="off"  data-title="Welcome" data-description="">
                 <!-- MAIN IMAGE -->
-                <img src="assets/dist/img/company/revolution/dummy.png"  alt=""  data-lazyload="assets/dist/img/real-estate/revolution/revolution-slider-bg.jpg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
+                <img src="assets/dist/img/company/revolution/dummy.png"  alt=""  data-lazyload="assets/dist/img/bumiseduh/3.jpeg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
                 <!-- LAYERS -->
 
                 <!-- LAYER NR. 1 -->
