--- a/bumiseduh.html
+++ b/bumiseduh.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BUMI SEDUH</title>
     <!-- Main style -->
-    <link rel="shortcut icon" href="./assets/dist/img/logo/12nobg.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/dist/img/logo/11.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/dist/css/real-estate.style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -35,7 +35,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="assets/dist/img/logo/12nobg.png" class="img-responsive" alt=""/></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/dist/img/logo/1_1.png" alt=""/></a>
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -153,7 +153,7 @@
                 </p>
               </div>
               <div class="rq-user-assigned-listing">
-                <h3 class="rq-title-secondary">Other Start-Up</h3>
+                <h3 class="rq-title-secondary">Start-Up Lainnya</h3>
                 <div class="rq-category-result" id="rq-category-result">
                   <div class="row">
                     <div class="col-md-6">
@@ -161,25 +161,25 @@
                         <a href="cangkirbumi.html" class="wow fadeIn" >
                           <div class="rq-category-result-single">
                             <div class="rq-result-img">
-                              <img src="assets/dist/img/real-estate/listing-category/listing-1.png" alt=""/>
+                              <img src="assets/dist/img/logo/cangkirbgnobg.png" style="height: 8vw ;" alt=""/>
                             </div>
                             <div class="rq-result-text">
                               <h4>Cangkir Bumi</h4>
-                              <p class="rq-listing-item-address">Jl. ... </p>
-                              <h3><span class="new-price">Cafe</span></h3>
+                              <p class="rq-listing-item-address">Cafe</p>
+                              <h3><span class="new-price">Details</span></h3>
                             </div>
                           </div>
                         </a>
 
-                        <a href="tentrembumi.html" class="wow fadeIn" >
+                        <a href="bumiseduh.html" class="wow fadeIn" >
                           <div class="rq-category-result-single">
                             <div class="rq-result-img">
-                              <img src="assets/dist/img/real-estate/listing-category/listing-2.png" alt=""/>
+                              <img src="assets/dist/img/logo/12nobg.png" alt=""/>
                             </div>
                             <div class="rq-result-text">
-                              <h4>Tentrem Bumi</h4>
-                              <p class="rq-listing-item-address">JL. ...</p>
-                              <h3><span class="new-price">Cafe</span></h3>
+                              <h4>Bumi Seduh</h4>
+                              <p class="rq-listing-item-address">Cafe</p>
+                              <h3><span class="new-price">Details</span></h3>
                             </div>
                           </div>
                         </a>
@@ -190,16 +190,27 @@
                         <a href="bumisuplai.html" class="wow fadeIn" >
                           <div class="rq-category-result-single">
                             <div class="rq-result-img">
-                              <img src="assets/dist/img/real-estate/listing-category/listing-4.png" alt=""/>
+                              <img src="assets/dist/img/logo/5nobg.png" alt=""/>
                             </div>
                             <div class="rq-result-text">
                               <h4>Bumi Suplai</h4>
-                              <p class="rq-listing-item-address">JL. ...</p>
-                              <h3><span class="new-price">Supplier</span></h3>
+                              <p class="rq-listing-item-address">Supplier</p>
+                              <h3><span class="new-price">Details</span></h3>
                             </div>
                           </div>
                         </a>
-
+                        <a href="tentrembumi.html" class="wow fadeIn" >
+                          <div class="rq-category-result-single">
+                            <div class="rq-result-img">
+                              <img src="assets/dist/img/logo/22nobg.png" alt=""/>
+                            </div>
+                            <div class="rq-result-text">
+                              <h4>Tentrem Bumi</h4>
+                              <p class="rq-listing-item-address">Cafe</p>
+                              <h3><span class="new-price">Details</span></h3>
+                            </div>
+                          </div>
+                        </a>
                       </div>
                     </div>
                   </div>
@@ -227,7 +238,7 @@
                   <p class="description" style="text-align: center;">Bumi Seduh merupakan badan usaha yang fokus bergerak di bidang ekosistem industri kopi di Indonesia, yakni membuka dan mengelola Coffee Shop, suplai bahan baku dan peralatan, kosultasi, serta pengembangan SDM.</p>
                   
                   <span style="text-align: center;" class="address"><i class="icon_pin" ></i> Jl. Wonosari KM 7 Bantul Yogyakarta. </span>
-                  <span style="text-align: center;" class="address"><i class="icon_mail_alt"></i>cangkirbumi@gmail.com</span>
+                  <span style="text-align: center;" class="address"><i class="icon_mail_alt"></i>bumiseduh@gmail.com</span>
                   <span style="text-align: center;" class="address"><i class="icon_phone"></i>(+62) 823-2326-4666</span>
 
                 </div>
@@ -282,8 +293,8 @@
             <p>Copyrights © 2022 <a href="#">Bumi Seduh</a> All Rights Reserved. Develop by Ari Dimas</p>
             <ul class="list-unstyled social-list">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Lokasi</a></li>
-              <li><a href="#">Profil</a></li>
+              <li><a href="lokasi.html">Lokasi</a></li>
+              <li><a href="about-us.html">Profil</a></li>
               <li><a href="https://api.whatsapp.com/send?phone=082323264666&text=Halo%20benar%20dengan%20bumi%20seduh?">Kontak</a></li>
             </ul>
           </div>
